# SyntreeAI

backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  graph.py  health.py  ingest.py  pr_review.py  query.py
backend/app/services/: chunker.py  embeddings.py  repo_cloner.py  retrieval.py  vector_store.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/app/: page.tsx
frontend/app/components/: AppBackground.tsx  CTASection.tsx  CodeEditor.tsx  CodeSmellDetector.tsx  DependencyGraph.tsx  FeatureShowcase.tsx  FixedBackground.tsx  Footer.tsx  HealthDashboard.tsx  HealthSummary.tsx  HeroSection.tsx  HowItWorks.tsx  ProblemSection.tsx  SemanticDiffViewer.tsx  TechStackStrip.tsx  ThreeBackground.tsx
frontend/app/lib/: api.ts
frontend/app/login/: page.tsx
