[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "gitpython>=3.1.50",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "tenacity>=9.1.4",
    "tree-sitter<0.22.0",
    "tree-sitter-languages>=1.10.2",
    "uvicorn[standard]>=0.49.0",
]
